[gd_scene load_steps=3 format=3 uid="uid://bpulxvf3qq4o6"]

[ext_resource type="Script" uid="uid://cgpcn3irbhqmc" path="res://scenes/main_menu.gd" id="1_idc82"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ct7qf"]
bg_color = Color(0, 0, 0, 0.639216)

[node name="MainMenu" type="CanvasLayer"]
layer = 128
script = ExtResource("1_idc82")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ct7qf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2

[node name="ButtonBack" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="ButtonNew" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "New"

[node name="ButtonQuit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/ButtonBack" to="." method="_on_button_back_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonNew" to="." method="_on_button_new_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonQuit" to="." method="_on_button_quit_pressed"]
